edit form component.css

--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -10,7 +10,7 @@
                 required>
         
         </div>
-        <div class="form-group">
+        <div class="form-group" id="davy">
 
             <label for="description">Description</label>
             <textarea class="form-control" id="description" rows="4" [(ngModel)]="newQuote.description"
