edit font size to italic

--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -8,7 +8,7 @@
         <div class="hen">
           <h6 id={{i}}>{{quote.name}} </h6>
         </div>
-        <div>
+        <div id="liz">
           <h6 id="{{i}}">{{quote.description}}</h6> 
         </div>
         <div>
