--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,7 +1,10 @@
 <div class="container">
   <h1>Real-Life-Quotes</h1>
   <hr>
-
+  <div class="row">
+  
+  </div>
+  
   <div class="row">
     <div class="col-md-6">
       <div *ngFor='let quote of quotes;let i = index'>
@@ -11,11 +14,12 @@
         <div id="liz">
           <h6 id="{{i}}">{{quote.description}}</h6> 
         </div>
-        <div>
+        <div id="ptl">
          <h6 id="{{i}}">due on {{quote.day|dateCount}} days ago</h6> 
         </div>
         <button (click)= 'deleteQuote($event,i)'>Delete Quote</button>
-
+        <button (click)='upvote(i)'><span><i class="fas fa-thumbs-up"></i>Like{{quote.like}}</span></button>
+        <button (click)='downvote(i)'><span><i class="fas fa-thumbs-down"></i>Dislike{{quote.unlike}}</span></button>
         <div *ngIf='quote.showDescription'>
           <app-quote-detail  [quote]='quote' (isComplete) = 'deleteQuote($event,i)'></app-quote-detail>
         </div>
@@ -25,5 +29,10 @@
       <app-quote-form (addQuote)="addNewQuote($event)"></app-quote-form>
     </div>
   </div>
+  <div class="row">
+    <span><i class="fas fa-thumbs-up"></i></span>
+    <span><i class="fas fa-thumbs-down"></i></span>
+  </div>
+  
   <p *ngIf='quotes.length > 5'></p>
 </div>
