--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -17,7 +17,7 @@
         <div id="ptl">
          <h6 id="{{i}}">due on {{quote.day|dateCount}} days ago</h6> 
         </div>
-          <button (click)= 'deleteQuote($event,i)'>Delete Quote</button>
+          <button (click)= 'deleteQuote($event,i )' id="dlt">Delete Quote</button>
           <button (click)='upvote(i)'><span><i class="fas fa-thumbs-up" id="bton"></i>Like{{quote.like}}</span></button>
           <button (click)='downvote(i)'><span><i class="fas fa-thumbs-down" id="bton"></i>Dislike{{quote.unlike}}</span></button>
        
