--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -12,7 +12,7 @@
         </div>
         <div class="form-group" id="davy">
 
-            <label for="description">Description</label>
+            <label for="description">New Quote</label>
             <textarea class="form-control" id="description" rows="4" [(ngModel)]="newQuote.description"
                 name="description" #description="ngModel" required></textarea>
            
