--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -5,7 +5,7 @@
 
         <div class="form-group" id="davy">
 
-            <label for="name">Name</label>
+            <label for="name">Authors Name</label>
             <input type="text" class="form-control" id="name" [(ngModel)]="newQuote.name" name="name" #name='ngModel'
                 required>
         
