--- a/src/app/quote/quote.component.css
+++ b/src/app/quote/quote.component.css
@@ -1,10 +1,11 @@
-.container{
+.jumbotron{
  background-image: url("images/outrun-vaporwave-hd-wallpaper-thumb.jpg");
  /* opacity: red; */
  
  background-repeat: no-repeat;
  background-size: cover;
  color: white;
+ font-size: 15px;
 
     
 }
@@ -32,4 +33,8 @@
 
 #dlt{
    background-color: green;
+}
+
+.six{
+    text-align: center;
 }
